# untitled-dcim-and-automation-system

./: .gitignore  LICENSE  README.md
cleanroom/: METHODOLOGY_AND_LOG.md  README.md
docs/: 404.html  CNAME  PUBLISHING.md  README.md  admin-panel-ui.md  api.html  architecture.html  brand.html  cleanroom.html  data-model.html  design-api-token-authentication.md  design-auth-user-management.md  design-mcp-server.md  (+10 more)
platform/backend/: pyproject.toml
platform/backend/nims/: config.py  crypto_util.py  db_url_from_rds_env.py  deps.py  identity_crypto.py  main.py  models_generated.py  seed_db.py  seed_demo_comprehensive.py  serialize.py  template_defaults.py  worker.py
platform/backend/nims/routers/: health.py
platform/backend/nims/routers/v1/: auth.py  automation.py  connectors.py  copilot.py  core.py  dcim.py  identity_admin.py  search.py  templates.py  ui.py  users_admin.py  validation.py
platform/backend/nims/schemas/: __init__.py  common.py  dcim.py
platform/backend/nims/services/: catalog_io.py  connector_credential_store.py  connector_probe.py  connector_url_policy.py  copilot_tools.py  dcim_referential.py  extensions.py  global_search.py  identity_connection_test.py  identity_settings.py  job_runner.py  job_worker.py  llm_config.py  llm_openai.py  llm_test.py  llm_url.py  resource_item.py  template_custom_attributes.py
platform/backend/nims/tools/: __init__.py  export_contracts.py
platform/backend/tests/: test_connector_url_policy.py  test_llm_url.py  test_smoke.py  test_template_custom_attributes.py  test_ui_extensibility.py  test_validation_contracts.py
(+187 files in other folders)
